# image-embedder

./: .gitignore  Cargo.toml  TODO.md  download_models.sh  query.sh
src/: main.rs
